style: disaligned inputs solved I was leading with a problem that was making input-datatime and label-datatime be disaligned. I solved this taking out display: flex of their container.

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -513,23 +513,27 @@ input.input-email {
 }
 
 .input-datatime__wrapper {
-  display: flex;
+  /* display: flex; */
   height: 3rem;
-  flex-flow: row nowrap;
+  /* flex-flow: row nowrap; */
   align-items: start;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   gap: 2rem; 
 }
 
 
 .label-datatime {
-  width: max-content;
-  text-align: left;
+  width: unset;
+  text-align: center;
   align-self: center;
+  font-style: italic;
+  position: relative;
+  margin-bottom: 1rem;
 }
 
 .input-datatime {
-  width: 50%;
+  width: 100%;
+  margin-right: 1rem;
 }
 
 
